Closed
Bug 42033
Opened 25 years ago
Closed 24 years ago
Relative width value of "0*" used with COL element produces unexpected results
Categories
(Core :: Layout: Tables, defect, P3)
Tracking
()
VERIFIED
FIXED
Future
People
(Reporter: karnaze, Assigned: karnaze)
References
()
Details
(Keywords: testcase)
Attachments
(2 files)
1.28 KB,
text/html
|
Details | |
857 bytes,
patch
|
Details | Diff | Splinter Review |
This is an offshoot of bug 29061.
Assignee | ||
Comment 1•25 years ago
|
||
Assignee | ||
Comment 2•25 years ago
|
||
This bug has been marked "future" because the original netscape engineer working
on this is over-burdened. If you feel this is an error, that you or another
known resource will be working on this bug, or if it blocks your work in some
way -- please attach your concern to the bug forreconsideration.
Assignee | ||
Updated•25 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Updated•25 years ago
|
Target Milestone: --- → Future
Comment 3•25 years ago
|
||
Adding testcase keyword so this doesn't show up on the bugathon search page.
Keywords: testcase
Updated•25 years ago
|
QA Contact: desale → chrisd
Assignee | ||
Comment 4•24 years ago
|
||
The example which came from 29061 is not completely correct. if <col width=0*>
is inside <table width=100%> and it is the only col, then the col will be as
wide as the table.
in
http://lxr.mozilla.org/seamonkey/source/layout/html/table/src/BasicTableLayoutStrategy.cpp#400
the aSkip0Proportional argument should also be used when the divisor at the very
beginning is computed. In the third table in the testcase the divisor is to
large as the first row is not omitted. As a result the second column does not
reach it's full width.
Comment 7•24 years ago
|
||
Use spaces, not tabs! Fix that, and sr=waterson
Assignee | ||
Comment 8•24 years ago
|
||
The patch is in. Thanks Bernd.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•