bug 42033 (patch submitted by bernd.mielke@snafu.de) - give 0 proportional cols their min width. sr=waterson, r=karnaze.